@startuml PlayerDomain
title Player Domain

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classFontStyle Bold
skinparam classAttributeFontSize 12

enum PlayerStatus {
    ACTIVE
    JAILED
    BANKRUPT
}

class Property

class Player {
    - username : string
    - balance : int
    - position : int
    - status : PlayerStatus
    - ownedProperties : vector<Property*>
    - consecutiveDoubles : int
    - jailAttempts : int
    - hasRolledThisTurn : bool
    - hasUsedSkillThisTurn : bool
    --
    + Player(username : string, initialBalance : int)
    + getUsername() : string
    + getBalance() : int
    + getPosition() : int
    + getStatus() : PlayerStatus
    + move(steps : int, boardSize : int = 40) : int
    + setPosition(newPosition : int) : void
    + addMoney(amount : int) : void
    + deductMoney(amount : int) : bool
    + canAfford(amount : int) : bool
    + setStatus(status : PlayerStatus) : void
    + isJailed() : bool
    + incrementJailAttempts() : void
    + resetJailAttempts() : void
    + addProperty(property : Property*) : void
    + removeProperty(property : Property*) : void
    + getOwnedProperties() : vector<Property*>
    + countOwnedRailroads() : int
    + countOwnedUtilities() : int
    + ownsFullColorGroup(colorGroup : string) : bool
    + calculatePropertyAssetValue() : int
    + calculateBuildingAssetValue() : int
    + calculateTotalWealth() : int
    + startTurn() : void
    + markRolled() : void
    + markSkillUsed() : void
    + hasRolled() : bool
    + hasUsedSkill() : bool
    + operator+=(amount : int) : Player
    + operator-=(amount : int) : Player
    + operator>(other : Player) : bool
    + operator<(other : Player) : bool
}

Player --> PlayerStatus : uses
Player "0..1" -- "0..*" Property : owns

@enduml